--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: Cole Boyer
 theme: jekyll-theme-minimal
-description: A page to link recruiters
+description: Seeking full time employment in the field of Information Technology.  Four years experience as a System Administrator.  Ten years experience with customer service and support.
